update azure functions example
