# apps/io-example-func/src/adapters/inbound/azure-functions-v4/get-greeting.handler.ts
@@ -1,37 +1,0 @@
-import { app } from "@azure/functions";
-import {
-  createRequestValidator,
-  GetHttpHandler,
-} from "@pagopa/io-core-azure-functions-v4-adapter";
-import { z } from "zod";
-
-import { GreetingUseCase } from "../../../application/use-cases/greeting.use-case";
-
-/**
- * Zod schema that validates HTTP request input.
- * Extracts `name` from route params.
- */
-const GetGreetingSchema = z
-  .object({
-    params: z.object({
-      name: z.string().min(1),
-    }),
-  })
-  .transform((input) => ({
-    name: input.params.name,
-  }));
-
-/**
- *
- * @param useCase
- */
-export const mountGetGreetingHandler = (useCase: GreetingUseCase) => {
-  const inputValidator = createRequestValidator(GetGreetingSchema);
-
-  app.http("GetGreeting", {
-    authLevel: "function",
-    handler: GetHttpHandler(useCase, inputValidator),
-    methods: ["GET"],
-    route: "greetings/{name}",
-  });
-};
