# apps/io-example-func/src/domain/entities/user-profile.entity.ts
@@ -1,0 +1,9 @@
+import type { EmailAddress, FiscalCode } from "@pagopa/io-core-domain";
+
+export interface UserProfile {
+  readonly createdAt: string;
+  readonly email: EmailAddress;
+  readonly fiscalCode: FiscalCode;
+  readonly name: string;
+  readonly updatedAt?: string;
+}
